// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown/presenters/InputPresenter renders with all props (that dropdown uses) 1`] = `
<div
  className="hig__dropdown__input-wrapper"
>
  <div
    className="hig__text-field-v1 hig__text-field-v1--button hig__text-field-v1--required hig__text-field-v1--disabled"
  >
    <div
      className="hig__text-field-v1__content"
    >
      <div
        className="hig__text-field-v1__input-wrapper hig__text-field-v1__input-wrapper--disabled"
      >
        <span
          className="hig__text-field-v1__label-spacer"
        />
        <label
          className="hig__text-field-v1__label hig__text-field-v1__label--required"
          htmlFor="id"
        >
          label
        </label>
        <div
          className="hig__text-field-v1__input-row"
        >
          <input
            className="hig__text-field-v1__input hig__text-field-v1__input--no-value"
            disabled={true}
            id="id"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            readOnly={true}
            type="button"
          />
        </div>
      </div>
      <p
        className="hig__text-field-v1__instructions"
      >
        instructions
      </p>
      <p
        className="hig__text-field-v1__required-notice"
      >
        this is required
      </p>
    </div>
  </div>
  <span
    className="hig__dropdown__input-caret"
  >
    <svg
      height="10"
      viewBox="0 0 10 10"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        caret-down-m
      </title>
      <path
        d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
      />
    </svg>
  </span>
</div>
`;

exports[`Dropdown/presenters/InputPresenter renders without props 1`] = `
<div
  className="hig__dropdown__input-wrapper"
>
  <div
    className="hig__text-field-v1 hig__text-field-v1--button"
  >
    <div
      className="hig__text-field-v1__content"
    >
      <div
        className="hig__text-field-v1__input-wrapper"
      >
        <div
          className="hig__text-field-v1__input-row"
        >
          <input
            className="hig__text-field-v1__input hig__text-field-v1__input--no-value"
            id="text-field-1"
            onBlur={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
  <span
    className="hig__dropdown__input-caret"
  >
    <svg
      height="10"
      viewBox="0 0 10 10"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        caret-down-m
      </title>
      <path
        d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
      />
    </svg>
  </span>
</div>
`;
